# watch-anime

./: README.md  pyproject.toml
watch_anime/: __init__.py
